[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.79"
clap = "4.5.4"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
regex = "1.10.4"
reqwest = {version="0.12.2", features=["json"]}
select = "0.6.0"
serde = {version="1.0.197", features=["derive"]}
thiserror = "1.0.58"
tokio = {version = "1.37.0", features = ["full"]}
tokio-stream = "0.1.15"
