[package]
name = "recon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
trust-dns-resolver = "0.21"
futures = "0.3"
tokio-stream = "0.1"
clap = {version = "4.5.4", features = ["derive"]}
log = "0.4.21"
env_logger = "0.11.3"
async-trait = "0.1.79"
